resolved issue of z-index in product section

--- a/assets/css/usb-swiper.css
+++ b/assets/css/usb-swiper.css
@@ -82,7 +82,7 @@ p.signature-text{display: none;}
 .transaction-table-header{text-align:left;width: 50%;padding: 10px;border-bottom: 1px solid #ebebeb;border-right: 1px solid #ebebeb;}
 .transaction-column{width: calc(50% - 15px);}
 .vt-product-wrapper {background: #0006;bottom: 0;display:none;position: fixed;top: 0;right: 0;left: 0;z-index: 999999}
-.vt-product-inner {background: #FFFFFF;border-radius: 16px;max-width: 600px;margin: 0 auto;padding: 40px 20px 20px;position: fixed;top: 5%;left: 0;right: 0;width:calc( 100% - 20px );}
+.vt-product-inner {background: #FFFFFF;border-radius: 16px;max-width: 600px;margin: 0 auto;padding: 40px 20px 20px;position: fixed;top: 12%;left: 0;right: 0;width:calc( 100% - 20px );}
 .vt-product-wrapper .vt-product-content {display: block;height: 60vh;overflow-y: scroll;}
 .vt-product-content::-webkit-scrollbar {width: 3px;background-color: #FFF!important;}
 .vt-product-content::-webkit-scrollbar-track {box-shadow: inset 0 0 6px #FFF!important;}
@@ -134,6 +134,8 @@ table.my-account-products-listings-table {padding: 20px 0;}
 .vt-product-wrapper .input-field-wrap .p-2, .p-2 {padding: 2px;}
 .button-wrap .vt-button-primary {margin-right: 0.8rem;}
 #vt_add_product_form .button-wrap .vt-button {margin-right: 0.5rem;}
+body header .et_builder_inner_content {z-index:1;}
+
 @media print {
     body{line-height: 1.2 !important;}
     .transaction-column{width: calc(33% - 15px);}
